--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,6 +6,9 @@
          beStrictAboutOutputDuringTests="true"
          colors="true"
 >
+    <php>
+         <ini name="xdebug.mode" value="coverage" />         
+    </php>
     <testsuites>
         <testsuite name="Test Suite">
             <directory>./tests/</directory>
