--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,7 +7,8 @@
          colors="true"
 >
     <php>
-         <ini name="xdebug.mode" value="coverage" />         
+         <ini name="xdebug.mode" value="coverage" />
+         <env name="XDEBUG_MODE" value="coverage" />         
     </php>
     <testsuites>
         <testsuite name="Test Suite">
